--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.leileitest.paperdemo"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:palette-v7:23.1.1'
     compile 'com.github.luckyandyzhang:StatusBarCompat:1.0.1'
+    compile 'com.github.luckyandyzhang:CleverRecyclerView:1.0.0'
     //compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'io.paperdb:paperdb:1.1'
 }
