--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'com.android.support:palette-v7:23.1.1'
     compile 'com.github.luckyandyzhang:StatusBarCompat:1.0.1'
     compile 'com.github.luckyandyzhang:CleverRecyclerView:1.0.0'
+    compile 'com.facebook.fresco:fresco:0.8.1'
+    compile 'com.facebook.fresco:imagepipeline-okhttp:0.8.1'
     //compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'io.paperdb:paperdb:1.1'
 }
