--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.github.luckyandyzhang:CleverRecyclerView:1.0.0'
     compile 'com.facebook.fresco:fresco:0.8.1'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.8.1'
+    compile 'com.github.fengdai:alertdialogpro-theme-material:0.2.5'
     //compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'io.paperdb:paperdb:1.1'
 }
