增加MeasureSpec的理解

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
 
         <activity android:name=".activity.FixViewPagerActivity"/>
 
+        <activity android:name=".activity.PrintViewMearsureActivity"/>
+
     </application>
 
 </manifest>
